feat: rebase master onto threadedpacket